Fixed css gap rem bug

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -398,7 +398,7 @@ section {
 #cards {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-	grid-gap: rem;
+	grid-gap: 0.5rem;
 }
 
 #cards p {
